--- a/resources/scss/utilities/_07-u-visibility.scss
+++ b/resources/scss/utilities/_07-u-visibility.scss
@@ -17,3 +17,7 @@
 .u-sr-only {
     @include sr-only();
 }
+
+.u-overflow-hidden {
+    overflow: hidden;
+}
